# haomd

./: .codebuddy_tmp  .env  .gitignore  AIChat-PDF目录会话实现方案.md  AIChat-remember命令与全局记忆摘要方案.md  AIChat会话压缩方案.md  AIChat会话模式保留方案A执行步骤.md  AIChat会话管理方案.md  AIChat实现方案.md  AIChat嵌入模式方案.md  AIChat指令系统方案.md  AIChat文档History浮窗实现步骤.md  AIChat文档会话历史方案.md  AISettings实现步骤.md  AISettings测试连接设计方案.md  CHANGELOG.md  CLAUDE.md  Dify-图片上传方案.md  GUIDE.md  GlobalMemory-全局记忆实现方案.md  HaoMD-Skills-插件系统方案.md  HaoMD-测试覆盖实施方案.md  HaoMD-音频支持分析报告.md  HaoMD项目分析报告.md  IMPLEMENTATION_PLAN.md  INSTALL.md  MindElixir-PDF打印丢图问题方案.md  ModelScope-vision-集成方案.md  PDF.js-批注功能完整实现方案.md  README.md  README_CN.md  README_EN.md  RELEASE.md  SOLID重构计划.md  Settings功能实现方案.md  Sidebar实现步骤.md  Tauri-动态子菜单实现方案.md  coze.md  export_html_pdf_implementation_plan.md  icon.md  (+29 more)
app/src-tauri/: Cargo.toml  ai_settings.default.json  recent.json  tauri.conf.json  使用说明.md  未命名.md
app/src-tauri/capabilities/: default.json  dialog.json
app/src-tauri/history/: 1769929236142.snap  1769929493437.snap
app/src-tauri/icons/: icon.icns
app/src-tauri/permissions/:  dialog.json
app/src-tauri/resources/: markdown-handbook.html
app/src-tauri/session:07ad2c94-a299-4149-8abb-951a440fc97c/.haomd/: doc_conversations.json  workspace.json
app/src-tauri/session:0e4b6a9b-be72-4c56-97cc-9b085db66e28/.haomd/: doc_conversations.json  workspace.json
app/src-tauri/session:0f4d15c0-b08b-4d1a-a13a-a703671f50b1/.haomd/: doc_conversations.json  workspace.json
app/src-tauri/session:18f06778-60dc-4f15-8706-ee46c61c5d52/.haomd/: doc_conversations.json  workspace.json
app/src-tauri/session:3e7081b4-7746-41af-afe3-8098b57cd017/.haomd/: doc_conversations.json  workspace.json
app/src-tauri/src/: ai_config.rs  ai_sessions.rs  alarm_audio.rs  alarm_paths.rs  alarm_sound.rs  alarm_storage.rs  backup_io.rs  backup_scope.rs  backup_settings.rs  calendar_storage.rs  clipboard_io.rs  dialog_io.rs  doc_conversations.rs  editor_settings.rs  external_open.rs  file_io.rs  font_catalog.rs  fs_commands.rs  fs_types.rs  gemini_compat.rs  haomd_paths.rs  image_generation.rs  inkscape.rs  lib.rs  lib_tests.rs  locale.rs  mcp_config.rs  mcp_manager.rs  menu.rs  music_audio.rs  music_paths.rs  music_playlist.rs  music_sound.rs  notes_config.rs  openai_compat.rs  pdf_export.rs  pdf_sessions.rs  platform.rs  pomodoro_audio.rs  pomodoro_paths.rs  (+14 more)
(+769 files in other folders)
