[package]
name = "HaoMD"
version = "0.1.0"
description = "An AI-powered Markdown editor for writing, thinking, and knowledge management"
authors = ["hao yufeng"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "process", "time", "io-util", "sync", "fs"] }
once_cell = "1.19"
html-escape = "0.2"
arboard = "3.4.1"
sha2 = "0.10"
