[package]
name = "HaoMD"
# NOTE: Cargo 版本仅为占位，实际应用版本以 app/package.json 为准。
version = "0.12.7"
description = "An AI-powered Markdown editor for writing, thinking, and knowledge management"
authors = ["hao yufeng"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["test"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "process", "time", "io-util", "sync", "fs"] }
once_cell = "1.19"
html-escape = "0.2"
arboard = "3.4.1"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
rand = "0.8"
chrono = { version = "0.4", features = ["clock"] }
mime_guess = "2"
percent-encoding = "2"
base64 = "0.13"
url = "2"
quick-xml = "0.38.4"
ttf-parser = "0.25"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
rquickjs = "0.6"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
lopdf = "0.35"
rodio = "0.20"
notify = "6.1"
